# DGSvsHS

./: .gitignore  CLAUDE.md  log.txt
DGSvsHS/Assets/: UniversalRenderPipelineGlobalSettings.asset
DGSvsHS/Assets/Scenes/: Client.unity  Server.unity
DGSvsHS/Assets/_Game/Client/: ClientMain.cs  ClientSimulation.cs  DGSvsHS.Client.asmdef  EnemyCorrector.cs  PlayerInputReader.cs
DGSvsHS/Assets/_Game/Editor/: BuildModeSwitcher.cs  DGSvsHS.Editor.asmdef
DGSvsHS/Assets/_Game/Gameplay/: Constants.cs  DGSvsHS.Gameplay.asmdef  DeterministicRng.cs  InputCmd.cs  RecipientSnapshotState.cs  SimState.cs  Snapshot.cs  SnapshotPriority.cs  WorldStateHistory.cs
DGSvsHS/Assets/_Game/Harness/: AutoPilot.cs  DGSvsHS.Harness.asmdef  TrialRunner.cs
DGSvsHS/Assets/_Game/Net/: DGSvsHS.Net.asmdef  INetworkClient.cs  INetworkServer.cs  WireCodec.cs  (+1 more)
DGSvsHS/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
native/quic_client/: Cargo.toml  README.md
native/quic_client/scripts/: build_and_deploy.ps1  build_and_deploy.sh
native/quic_client/src/: client.rs  ffi.rs  lib.rs  wire.rs
rust/: .gitignore  Cargo.toml  build_microvm_aarch64.sh  hermit-loader-aarch64
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/gameplay/: Cargo.toml
rust/gameplay/examples/: smoke_client.rs
rust/gameplay/src/: lib.rs  system_metrics.rs
rust/gameplay/src/game/: constants.rs  mod.rs  spatial.rs  stress.rs  types.rs
rust/gameplay/src/network/: cert.rs  codec.rs  events.rs  mod.rs  plugin.rs
rust/gameplay/src/network/certs/: cert.pem  key.pem
rust/unikernel/: Cargo.toml
(+23 files in other folders)
