[workspace]
resolver = "3"
members = ["cli","gameplay"]

[profile.release]
opt-level = "z"     # Optimize for minimum binary size
lto = true          # Link Time Optimization (removes dead engine code)
codegen-units = 1   # Slower compile times, but tighter final binary
strip = true        # Strip all symbols from the binary
panic = "abort"     # Remove panic unwinding tables (saves ~1MB)